@@ -25,6 +25,10 @@ partitioner (0.14) UNRELEASED; urgency=low
     - Fixed to not call the partitioner tool without a disk select.
   * Thiemo Seufer
     - Use always fdisk for mips.
+    - Remove main.h, fix broken function prototypes and static variable
+      definition in the header file by that.
+    - Simplify extract_choice().
+    - Respect MAX_DISKS.
 
  -- Bart Cornelis <cobaco@linux.be>  Fri, 19 Dec 2003 17:28:04 +0100
 
